--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -1,10 +1,10 @@
 .quiz-container {
+  width: 100%;
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  box-sizing: border-box;
+  overflow: auto;
 }
 
 .signin-container {
