Add dummy change to force clean build

--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -26,6 +26,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+/* Force clean build - Updated at 03:44 PM JST, June 24, 2025 */
+
 .signin-input,
 .signin-button {
   width: 100%;
