Added red border to window for testing

--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -1,3 +1,8 @@
+body {
+  border: 5px solid red !important;
+  background: yellow !important;
+}
+
 /* === QuizApp.css - Improved Legibility === */
 
 /* === Base Container === */
