--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -72,7 +72,7 @@ body {
   width: 100%;
 }
 
-.question-block h3 {
+.quiz-container h3 {
   font-size: 24px !important; /* Larger question text */
   margin-bottom: 16px;
   color: red !important;   /* temporary test */
