Adding pink background

--- a/src/QuizApp.css
+++ b/src/QuizApp.css
@@ -1,3 +1,9 @@
+.quiz-container > div {
+  border: 2px solid blue !important;
+  background: pink !important;
+  margin: 10px 0 !important;
+}
+
 /* === QuizApp.css - Improved Legibility === */
 
 /* === Base Container === */
